--- a/template/Makefile
+++ b/template/Makefile
@@ -17,4 +17,12 @@ test: node_modules
 validate: node_modules
 	@standard
 
-.PHONY: test validate release
+init:
+	@git init
+	@git add .
+	@git commit -am "FIRST"
+	@hub create micro-js/{{basename}} -d {{description}}
+	@travis enable
+	@git push -u origin master
+
+.PHONY: test validate init
